--- a/index.html
+++ b/index.html
@@ -4,10 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <h1>Lorem ipsum dolor sit amet</h1>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolore doloremque rem sed, obcaecati quo facilis, deleniti beatae temporibus, illo aspernatur ipsa voluptatum? Ab incidunt eveniet dolorum numquam illum optio. Ullam amet quidem aliquid facilis numquam. Inventore dolores id minima voluptatum, qui ut possimus rerum ad! Neque optio architecto accusantium porro!</p>
+    <ol>
+        <li>Lorem ipsum dolor sit</li>
+        <li>Lorem ipsum dolor sit</li>
+        <li>Lorem ipsum dolor sit</li>
+        <li>Lorem ipsum dolor sit</li>
+        <li>Lorem ipsum dolor sit</li>
+        <li>Lorem ipsum dolor sit</li>
+        <li>Lorem ipsum dolor sit</li>
+    </ol>
 </body>
 </html>
